# daikoku/app/fr/maif/daikoku/controllers/EntitiesController.scala
@@ -464,8 +464,6 @@ class EntitiesController(
             maxPerMonth = None,
             costPerMonth = None,
             costPerRequest = None,
-            billingDuration = None,
-            trialPeriod = None,
             currency = None,
             customName = "new usage plan",
             customDescription = None,
